<resources>
    <string name="app_name">simpleTestApp</string>


    <string name="logo">logo</string>
    <string name="action_search">Search</string>
    <string name="profileBtn">Profile</string>


    <!-- DEPRECATED
    <string name="action_settings">Settings</string>
    <string name="posBtn">posBtn</string>
    <string name="centerBtn">centerBtn</string>
    <string name="removeAll">removeAll</string>
    <string name="addUserPin">addUserPin</string>
    <string name="circleBtn">circleBtn</string>
    -->

    <string name="highlight">Bound Request</string>
    <string name="maj">Mise à jour</string>
    <string name="add">Surveiller zone</string>
    <string name="clear_MZ">Effacer zones</string>

    <string name="cB_fire">Feux</string>
    <string name="cB_water">Inondations</string>
    <string name="cB_terrain">Terrain</string>
    <string name="cB_meteo">Meteo</string>
    <string name="cB_zones">Afficher zones</string>
    <string name="cB_histo">Historique</string>
    <string name="settings">Settings</string>
    <string name="cB_users">Alertes d\'usagers</string>


    <string name="warning">Ajouter une alerte de \nquel type au serveur ?</string>
    <string name="feu">Feu</string>
    <string name="eau">Eau</string>
    <string name="vent">Météo</string>
    <string name="seisme">Terrain</string>
    <string name="cancel">Annuler</string>
    <string name="title_activity_settings">Settings</string>













    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>

















    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- TODO: Auth UI -->
    <string name="launch_title">FirebaseUI Auth Demo</string>
    <string name="sign_in_start">Start</string>
    <string name="sign_in_silent">Sign in silently</string>

    <string name="providers_header">Auth providers</string>
    <string name="providers_google">Google</string>
    <string name="providers_email">Email</string>

    <string name="theme_header">Theme</string>
    <string name="theme_default">Default theme</string>
    <string name="theme_purple">Purple Theme</string>
    <string name="theme_green">Green Theme</string>
    <string name="theme_dark">Dark Theme</string>

    <string name="logo_header">Logo</string>
    <string name="logo_firebase">Firebase Auth</string>
    <string name="logo_google">Google</string>
    <string name="logo_none">None</string>

    <string name="tos_header">Terms of Service URL</string>
    <string name="tos_google">Google</string>
    <string name="tos_firebase">Firebase</string>

    <string name="pp_header">Privacy Policy URL</string>
    <string name="pp_google">Google</string>
    <string name="pp_firebase">Firebase</string>

    <string name="google_scopes_header">Example extra Google scopes</string>
    <string name="google_scope_drive_file">Drive File</string>
    <string name="google_scope_youtube_data">Youtube data</string>

    <string name="facebook_permissions_header">Example extra Facebook permissions</string>
    <string name="facebook_permission_friends">Friends</string>
    <string name="facebook_permission_photos">Photos</string>

    <string name="github_permissions_header">Example extra GitHub permissions</string>
    <string name="github_permission_repo">Repo</string>
    <string name="github_permission_gist">Gist</string>

    <string name="options_header">Other Options</string>
    <string name="options_enable_credential_selector">Enable Smart Lock\'s credential selector</string>
    <string name="options_enable_hint_selector">Enable Smart Lock\'s hint selector</string>
    <string name="options_allow_new_email_acccount">Allow new account creation</string>
    <string name="options_require_name">Require first/last name with email accounts.</string>

    <string name="configuration_required">Configuration required - see README.md</string>
    <string name="google_label_missing_config">Google configuration missing</string>
    <string name="facebook_label_missing_config">Facebook configuration missing</string>
    <string name="twitter_label_missing_config">Twitter configuration missing</string>
    <string name="github_label_missing_config">GitHub configuration missing</string>

    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>

    <string name="title_anonymous_upgrade">FirebaseUI Anonymous Account Linking</string>
    <string name="anonymous_sign_in">Anonymous Sign In</string>
    <string name="launch_auth_ui">Launch Auth UI</string>
    <string name="resolve_merge_conflict">Resolve Merge Conflict</string>

    <!-- Auth UI - Signed in -->
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>

    <string name="sign_in_failed">Sign in failed</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>

    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="used_providers">Providers used: %s</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>





    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="signed_out">Signed out</string>
    <!-- TODO: Base activity -->
    <string name="loading">Loading</string>

</resources>
